# IntradayReversalScanner

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.py  test_indicators.py
config/: config.yaml
scripts/: deploy.sh  run_scanner.bat  setup.bat  setup.sh
src/: config.py  main.py
src/alerts/: alerts.py
src/backtest/: engine.py
src/catalysts/: catalysts.py
src/dashboard/: dashboard.py
src/data/: dhan_client.py  universe.py
src/indicators/: indicators.py  volume.py
src/ranking/: scoring.py
src/risk/: manager.py
src/scanners/: manager.py  scanners.py
src/signals/: patterns.py  trend.py
tests/: test_scanner.py
webapp/: app.py  requirements.txt
webapp/static/: style.css
webapp/templates/: index.html
